--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -31,7 +31,6 @@ color: white
 1. Radboud University Nijmegen Medical Centre, Nijmegen, the Netharlands
 2. Nencki Institute of Experimental Biology, Warsaw, Poland 
 
-
 **Abstract:** 
 Functional connectivity (FC) research has become one of the leading concepts used for characterising network dynamics across multiple disciplines, from neuroimaging, through gene expression networks, to social networks. It is also a basis for graph theoretical biomarkers of psychiatric disorders and as such, it become an important subfield of cognitive neuroimaging.
 
@@ -42,7 +41,7 @@ We will attempt to answer the questions: what are the pros and cons of different
 
 ![test image size](/img/projects/project1.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
-*Fig: different types of networks. A: a social network (Facebook); B: correlations on the stock exchange (106 companies listed at NASDAQ-100); C: a gene co-expression network (image adapted from http://wikipedia.org on CC BY-SA 3.0 license); D: large scale resting state networks in the brain (image adapted from Smith et al, 2009)*
+*Fig.1. different types of networks. A: a social network (Facebook); B: correlations on the stock exchange (106 companies listed at NASDAQ-100); C: a gene co-expression network (image adapted from http://wikipedia.org on CC BY-SA 3.0 license); D: large scale resting state networks in the brain (image adapted from Smith et al, 2009)*
 
 **A list of 1-5 key papers/materials summarising the subject**: 
 1. [http://www.scholarpedia.org/article/Brain_connectivity](http://www.scholarpedia.org/article/Brain_connectivity)
@@ -92,7 +91,7 @@ The goal of the project is twofold:
 We will provide the data for this project. The initial results are promising, see [this git repo](https://github.com/grzegorz225/trypophobia-detector). 
 
 ![image-title-here](/img/projects/project2.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
-*Fig: The holes in lotus seed heads cause some anxiety in some people (source: Wikipedia)*
+*Fig.2. The holes in lotus seed heads cause some anxiety in some people (source: Wikipedia)*
 
 **A list of 1-5 key papers/materials summarising the subject**: 
 
@@ -134,7 +133,7 @@ A great many processes of different levels of complexity can be described in ter
 Our game will be developed from scratch during the 2-day Brianhack, using ideas from participants. We will work on all aspects of game design: the concept, the graphics, programming, etc (while taking into account time constraints). 
 
 ![image-title-here](/img/projects/project3.png){:class="img-responsive" height="100%"}
-*FigA: Screenshot from joint action game used in experiments by Satta et al 2007. FigB: Parallel (a) and comlimentary (b) roles in joint action (Sebanz et al. 2006)*
+*Fig.3A. Screenshot from joint action game used in experiments by Satta et al 2007. Fig.3B. Parallel (a) and comlimentary (b) roles in joint action (Sebanz et al. 2006)*
 
 **The general requirements for the game are as follows:**
 
@@ -201,7 +200,7 @@ We believe that in case of success this project can provide information about th
 
 ![image-title-here](/img/projects/imdb.png?style=centerme){:class="img-responsive" height="100%" width="100%" align="center"}
 
-*Fig. The Internet Movie Database front page.*
+*Fig.4. The Internet Movie Database front page.*
 
 
 **A list of 1-5 key papers/materials summarising the subject:**
@@ -230,19 +229,20 @@ We believe that in case of success this project can provide information about th
 #### Authors: Anastasia Osoianu / Charl Linssen <a href="mailto:charl@turingbirds.com"><i class="fa fa-envelope"></i></a> / Katja Heuer / Roberto Toro
 
 **Abstract:**
-Polarized light imaging (PLI) as well as the tractography of high angular resolution diffusion weighted imaging (DWI) data reveal a gross white matter (WM) geometry of striking regularity[[^1],[^3]]. This makes the neuroanatomist wonder whether it would be possible to generate a connectome based exclusively on a small set of hypotheses:
+Polarized light imaging (PLI) as well as the tractography of high angular resolution diffusion weighted imaging (DWI) data reveal a gross white matter (WM) geometry of striking regularity[[1]](http://journal.frontiersin.org/researchtopic/168/wiring-principles-of-cerebral-cortex#articles),[[3]](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json). This makes the neuroanatomist wonder whether it would be possible to generate a connectome based exclusively on a small set of hypotheses:
 
 * more than 90% of white matter connections are cortico­cortical
 -  the density of fibres is homogeneous throughout the white matter
 * fibres are oriented perpendicular to gyral crowns and parallel to sulcal fundi
 * fibres are sticky, which makes them aggregate in bundles of similar orientation.
-How much of a real brain connectome would be recovered by such a simple and reductionistic model?
 
+How much of a real brain connectome would be recovered by such a simple and reductionistic model?
+ 
 We propose to approach this question in the simple case of a 2D coronal slice. We use methods inspired by swarm intelligence [[2]]([http://www.red3d.com/cwr/boids/), and simulate a dynamical system where particles are instantiated at the gray matter/white matter boundary. The particles are allowed to propagate within the white matter mask, following simple rules that reflect the above list of hypotheses. After reaching a steady state, the white matter orientation distribution is reconstructed on a voxel-by-voxel basis, for each individual voxel based on the statistics of the particle paths crossing it. This is roughly the opposite of streamline tractography, where paths are sampled based on a distribution map. By implementing derived measures such as an anisotropy index, the resulting map can be quantitatively compared to empirical data. We are especially interested in multimodal effects that occur e.g. when two fibre bundles cross. We will validate our model on coronal slices of the vervet monkey, as an excellent empirical dataset is available [[3]](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json). Proof­ of­ concept code is available via GitHub[[4]](https://github.com/aniv0s/FakeTensorImaging).
 
 ![image-title-here](/img/projects/project5.jpg?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
-*Fig. Visualization of a DTI measurement of a human brain. Depicted are reconstructed fiber tracts that run through the mid-sagittal plane (source: Thomas Schultz, Wikipedia).*
+*Fig.5. Visualization of a DTI measurement of a human brain. Depicted are reconstructed fiber tracts that run through the mid-sagittal plane (source: Thomas Schultz, Wikipedia).*
 
 **A list of 1-5 key papers/materials summarising the subject:**
 
@@ -296,7 +296,7 @@ The reference staging will be given by additional sleep stager (Philips Alice) o
 
 ![image-title-here](/img/projects/project6.png){:class="img-responsive" height="50%" }
 
-*Fig.A Neuroon device (source: Neuroon).*
+*Fig.6. Neuroon, sleep mask device (source: Neuroon).*
 
 **A list of 1-5 key papers summarising the subject:**
 
@@ -342,7 +342,7 @@ Finally, participants will be asked to consider ways of interpreting the feature
 
 ![image-title-here](/img/projects/project7.jpg?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
-*Fig. Similarity matrix of ~1700 images.*
+*Fig.7. Similarity matrix of ~1700 images.*
 
 **A list of 1-5 key papers summarising the subject:**
 1. Cole JH, Poudel RPK, Tsagkrasoulis D, et al. Predicting brain age with deep learning from raw imaging data results in a reliable and heritable biomarker. NeuroImage 2017. doi: 10.1016/j.neuroimage.2017.07.059
@@ -382,7 +382,7 @@ Small, genetically tractable species such as larval zebrafish, Drosophila, or Ca
 
 ![image-title-here](/img/projects/project8.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
-*Fig. Classroom teaching (A) and equipment improvisation. Optogenetic activation of Chrimson in Adult fruit fly (G).*
+*Fig.8. Classroom teaching (A) and equipment improvisation. Optogenetic activation of Chrimson in Adult fruit fly (G).*
 
 **A list of 1-5 key papers / online materials summarising the subject:**
 1. [http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1002086](http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1002086)
