--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -8,7 +8,7 @@ color: white
 
 # Commitee
 
-## The AoN Brainhack Warsaw 2019 committee:
+## The Brainhack Warsaw 2019 committee:
 
 <div id="profile-container">
 
