--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -9,10 +9,9 @@ style: center
 
 ## Let's Brainhack!
 
-### **1-3.03.2019** @  University of Warsaw
+### **1-3.03.2019** @  University of Warsaw ❤️❤️❤️
 
 
-#### ❤️❤️❤️
 
 # |
 
