--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -9,11 +9,12 @@ style: center
 
 ## Let's Brainhack!
 
-### **1-3.03.2019** @  University of Warsaw ❤️❤️❤️
+### **1-3.03.2019** @  University of Warsaw
 
 
+#### ❤️❤️❤️
 
-# |
+<br><br>
 
 
-[![Facebook](img/fb_ico.png)](https://web.facebook.com/brainhackWAW) [![Twitter](img/twitter_ico.png)](https://twitter.com/brainhackW)
+[![Facebook](img/fb_ico.png)]<a target="_blank" (https://web.facebook.com/brainhackWAW)> [![Twitter](img/twitter_ico.png)](https://twitter.com/brainhackW)
